opam-version: "2.0"
license: "LICENSE"
depends: [
  "dune" {>= "3.11"}
  "ocaml" {>= "5.1.0"}
  "core" {>= "0.16.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

